Fix UI for Solo Asset mode. Also improves square aspect ratio spacing. (#6639)
* Fix UI for Solo Asset mode. Also improves square aspect ratio spacing.

* Undo unwanted formatting

--- a/resources/sass/components/assets.scss
+++ b/resources/sass/components/assets.scss
@@ -87,11 +87,11 @@
     padding: 16px;
 
     .asset-tile {
-        @apply flex items-center w-full flex-col justify-between cursor-pointer border rounded;
-        aspect-ratio: 1 / 1;
+        @apply flex items-center w-full flex-col justify-between cursor-pointer border rounded overflow-hidden;
 
         .asset-thumb-container {
             @apply flex items-center flex-1 w-full justify-center relative;
+            aspect-ratio: 1 / 1;
         }
     }
 }
